index.css
#main-container {
    border: black solid 1px;
    width: 232px;
    height: 320px;
    border-radius: 4px;
    background-color: rgba(99,99,99,.90);
}

#display {
    /* border: white solid 1px; */
    width: 100%;
    margin-top: 20px;
    height: 55px;
    color: white;
    
}

#buttons {
    width: 90%;
    /* margin: auto; */
    /* height: 300px; */
    display: flex;
    flex-wrap: wrap;
    /* justify-content: center; */
}
#buttons > .button {
    color: white;
    border: rgb(82, 84, 88) solid 1px;
    width: 50px;
    height: 45px;
    text-align: center;
    line-height: 60px;
    font-size: 20px;
}

